[gd_scene load_steps=7 format=3 uid="uid://hod5ouvqdw5u"]

[ext_resource type="Script" path="res://dialog_ui.gd" id="1_on6jx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rpvfw"]
content_margin_left = 24.0
content_margin_top = 3.0
content_margin_right = 24.0
content_margin_bottom = 9.0
bg_color = Color(0.117647, 0.117647, 0.117647, 0.92549)
border_width_top = 2
border_color = Color(0.199086, 0.199086, 0.199086, 1)

[sub_resource type="SystemFont" id="SystemFont_eq6bv"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_s36km"]
line_spacing = 0.0
font = SubResource("SystemFont_eq6bv")
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0l21m"]
content_margin_left = 24.0
content_margin_top = 22.0
content_margin_right = 39.0
content_margin_bottom = 23.0
bg_color = Color(0.105882, 0.105882, 0.105882, 0.811765)
border_width_top = 2
border_color = Color(0.199086, 0.199086, 0.199086, 1)

[sub_resource type="LabelSettings" id="LabelSettings_l4rdq"]
font_size = 24

[node name="DialogUI" type="VBoxContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -219.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0
alignment = 2
script = ExtResource("1_on6jx")

[node name="SpeakerPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_rpvfw")

[node name="SpeakerLabel" type="Label" parent="SpeakerPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Reina"
label_settings = SubResource("LabelSettings_s36km")
vertical_alignment = 1

[node name="DialogPanel" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_0l21m")

[node name="DialogLabel" type="Label" parent="DialogPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Have you ever had a dream that that you um you had you'd you would you could you'd do you wi you wants you you could do so you you'd do you could you you want you want him to do you so much you could do anything?"
label_settings = SubResource("LabelSettings_l4rdq")
autowrap_mode = 3
visible_characters_behavior = 1
